qt6/webengine/gen_qwebengineprofile.nim

import Qt6WebEngineWidgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6WebEngineWidgets")
{.compile("gen_qwebengineprofile.cpp", cflags).}


type QWebEngineProfileHttpCacheType* = cint
const
  QWebEngineProfileMemoryHttpCache* = 0
  QWebEngineProfileDiskHttpCache* = 1
  QWebEngineProfileNoCache* = 2



type QWebEngineProfilePersistentCookiesPolicy* = cint
const
  QWebEngineProfileNoPersistentCookies* = 0
  QWebEngineProfileAllowPersistentCookies* = 1
  QWebEngineProfileForcePersistentCookies* = 2



import gen_qwebengineprofile_types
export gen_qwebengineprofile_types

import
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qurl,
  gen_qwebengineclientcertificatestore,
  gen_qwebenginecookiestore,
  gen_qwebenginedownloadrequest,
  gen_qwebenginescriptcollection,
  gen_qwebenginesettings,
  gen_qwebengineurlrequestinterceptor,
  gen_qwebengineurlschemehandler
export
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qurl,
  gen_qwebengineclientcertificatestore,
  gen_qwebenginecookiestore,
  gen_qwebenginedownloadrequest,
  gen_qwebenginescriptcollection,
  gen_qwebenginesettings,
  gen_qwebengineurlrequestinterceptor,
  gen_qwebengineurlschemehandler

type cQWebEngineProfile*{.exportc: "QWebEngineProfile", incompleteStruct.} = object

proc fcQWebEngineProfile_new(): ptr cQWebEngineProfile {.importc: "QWebEngineProfile_new".}
proc fcQWebEngineProfile_new2(name: struct_miqt_string): ptr cQWebEngineProfile {.importc: "QWebEngineProfile_new2".}
proc fcQWebEngineProfile_new3(parent: pointer): ptr cQWebEngineProfile {.importc: "QWebEngineProfile_new3".}
proc fcQWebEngineProfile_new4(name: struct_miqt_string, parent: pointer): ptr cQWebEngineProfile {.importc: "QWebEngineProfile_new4".}
proc fcQWebEngineProfile_metaObject(self: pointer, ): pointer {.importc: "QWebEngineProfile_metaObject".}
proc fcQWebEngineProfile_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebEngineProfile_metacast".}
proc fcQWebEngineProfile_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebEngineProfile_metacall".}
proc fcQWebEngineProfile_tr(s: cstring): struct_miqt_string {.importc: "QWebEngineProfile_tr".}
proc fcQWebEngineProfile_storageName(self: pointer, ): struct_miqt_string {.importc: "QWebEngineProfile_storageName".}
proc fcQWebEngineProfile_isOffTheRecord(self: pointer, ): bool {.importc: "QWebEngineProfile_isOffTheRecord".}
proc fcQWebEngineProfile_persistentStoragePath(self: pointer, ): struct_miqt_string {.importc: "QWebEngineProfile_persistentStoragePath".}
proc fcQWebEngineProfile_setPersistentStoragePath(self: pointer, path: struct_miqt_string): void {.importc: "QWebEngineProfile_setPersistentStoragePath".}
proc fcQWebEngineProfile_cachePath(self: pointer, ): struct_miqt_string {.importc: "QWebEngineProfile_cachePath".}
proc fcQWebEngineProfile_setCachePath(self: pointer, path: struct_miqt_string): void {.importc: "QWebEngineProfile_setCachePath".}
proc fcQWebEngineProfile_httpUserAgent(self: pointer, ): struct_miqt_string {.importc: "QWebEngineProfile_httpUserAgent".}
proc fcQWebEngineProfile_setHttpUserAgent(self: pointer, userAgent: struct_miqt_string): void {.importc: "QWebEngineProfile_setHttpUserAgent".}
proc fcQWebEngineProfile_httpCacheType(self: pointer, ): cint {.importc: "QWebEngineProfile_httpCacheType".}
proc fcQWebEngineProfile_setHttpCacheType(self: pointer, httpCacheType: cint): void {.importc: "QWebEngineProfile_setHttpCacheType".}
proc fcQWebEngineProfile_setHttpAcceptLanguage(self: pointer, httpAcceptLanguage: struct_miqt_string): void {.importc: "QWebEngineProfile_setHttpAcceptLanguage".}
proc fcQWebEngineProfile_httpAcceptLanguage(self: pointer, ): struct_miqt_string {.importc: "QWebEngineProfile_httpAcceptLanguage".}
proc fcQWebEngineProfile_persistentCookiesPolicy(self: pointer, ): cint {.importc: "QWebEngineProfile_persistentCookiesPolicy".}
proc fcQWebEngineProfile_setPersistentCookiesPolicy(self: pointer, persistentCookiesPolicy: cint): void {.importc: "QWebEngineProfile_setPersistentCookiesPolicy".}
proc fcQWebEngineProfile_httpCacheMaximumSize(self: pointer, ): cint {.importc: "QWebEngineProfile_httpCacheMaximumSize".}
proc fcQWebEngineProfile_setHttpCacheMaximumSize(self: pointer, maxSize: cint): void {.importc: "QWebEngineProfile_setHttpCacheMaximumSize".}
proc fcQWebEngineProfile_cookieStore(self: pointer, ): pointer {.importc: "QWebEngineProfile_cookieStore".}
proc fcQWebEngineProfile_setUrlRequestInterceptor(self: pointer, interceptor: pointer): void {.importc: "QWebEngineProfile_setUrlRequestInterceptor".}
proc fcQWebEngineProfile_clearAllVisitedLinks(self: pointer, ): void {.importc: "QWebEngineProfile_clearAllVisitedLinks".}
proc fcQWebEngineProfile_clearVisitedLinks(self: pointer, urls: struct_miqt_array): void {.importc: "QWebEngineProfile_clearVisitedLinks".}
proc fcQWebEngineProfile_visitedLinksContainsUrl(self: pointer, url: pointer): bool {.importc: "QWebEngineProfile_visitedLinksContainsUrl".}
proc fcQWebEngineProfile_settings(self: pointer, ): pointer {.importc: "QWebEngineProfile_settings".}
proc fcQWebEngineProfile_scripts(self: pointer, ): pointer {.importc: "QWebEngineProfile_scripts".}
proc fcQWebEngineProfile_urlSchemeHandler(self: pointer, param1: struct_miqt_string): pointer {.importc: "QWebEngineProfile_urlSchemeHandler".}
proc fcQWebEngineProfile_installUrlSchemeHandler(self: pointer, scheme: struct_miqt_string, param2: pointer): void {.importc: "QWebEngineProfile_installUrlSchemeHandler".}
proc fcQWebEngineProfile_removeUrlScheme(self: pointer, scheme: struct_miqt_string): void {.importc: "QWebEngineProfile_removeUrlScheme".}
proc fcQWebEngineProfile_removeUrlSchemeHandler(self: pointer, param1: pointer): void {.importc: "QWebEngineProfile_removeUrlSchemeHandler".}
proc fcQWebEngineProfile_removeAllUrlSchemeHandlers(self: pointer, ): void {.importc: "QWebEngineProfile_removeAllUrlSchemeHandlers".}
proc fcQWebEngineProfile_clearHttpCache(self: pointer, ): void {.importc: "QWebEngineProfile_clearHttpCache".}
proc fcQWebEngineProfile_setSpellCheckLanguages(self: pointer, languages: struct_miqt_array): void {.importc: "QWebEngineProfile_setSpellCheckLanguages".}
proc fcQWebEngineProfile_spellCheckLanguages(self: pointer, ): struct_miqt_array {.importc: "QWebEngineProfile_spellCheckLanguages".}
proc fcQWebEngineProfile_setSpellCheckEnabled(self: pointer, enabled: bool): void {.importc: "QWebEngineProfile_setSpellCheckEnabled".}
proc fcQWebEngineProfile_isSpellCheckEnabled(self: pointer, ): bool {.importc: "QWebEngineProfile_isSpellCheckEnabled".}
proc fcQWebEngineProfile_downloadPath(self: pointer, ): struct_miqt_string {.importc: "QWebEngineProfile_downloadPath".}
proc fcQWebEngineProfile_setDownloadPath(self: pointer, path: struct_miqt_string): void {.importc: "QWebEngineProfile_setDownloadPath".}
proc fcQWebEngineProfile_clientCertificateStore(self: pointer, ): pointer {.importc: "QWebEngineProfile_clientCertificateStore".}
proc fcQWebEngineProfile_defaultProfile(): pointer {.importc: "QWebEngineProfile_defaultProfile".}
proc fcQWebEngineProfile_downloadRequested(self: pointer, download: pointer): void {.importc: "QWebEngineProfile_downloadRequested".}
proc fQWebEngineProfile_connect_downloadRequested(self: pointer, slot: int) {.importc: "QWebEngineProfile_connect_downloadRequested".}
proc fcQWebEngineProfile_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebEngineProfile_tr2".}
proc fcQWebEngineProfile_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebEngineProfile_tr3".}
proc fQWebEngineProfile_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QWebEngineProfile_virtualbase_metacall".}
proc fcQWebEngineProfile_override_virtual_metacall(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_metacall".}
proc fQWebEngineProfile_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QWebEngineProfile_virtualbase_event".}
proc fcQWebEngineProfile_override_virtual_event(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_event".}
proc fQWebEngineProfile_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWebEngineProfile_virtualbase_eventFilter".}
proc fcQWebEngineProfile_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_eventFilter".}
proc fQWebEngineProfile_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWebEngineProfile_virtualbase_timerEvent".}
proc fcQWebEngineProfile_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_timerEvent".}
proc fQWebEngineProfile_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWebEngineProfile_virtualbase_childEvent".}
proc fcQWebEngineProfile_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_childEvent".}
proc fQWebEngineProfile_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWebEngineProfile_virtualbase_customEvent".}
proc fcQWebEngineProfile_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_customEvent".}
proc fQWebEngineProfile_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWebEngineProfile_virtualbase_connectNotify".}
proc fcQWebEngineProfile_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_connectNotify".}
proc fQWebEngineProfile_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWebEngineProfile_virtualbase_disconnectNotify".}
proc fcQWebEngineProfile_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWebEngineProfile_override_virtual_disconnectNotify".}
proc fcQWebEngineProfile_staticMetaObject(): pointer {.importc: "QWebEngineProfile_staticMetaObject".}
proc fcQWebEngineProfile_delete(self: pointer) {.importc: "QWebEngineProfile_delete".}


func init*(T: type QWebEngineProfile, h: ptr cQWebEngineProfile): QWebEngineProfile =
  T(h: h)
proc create*(T: type QWebEngineProfile, ): QWebEngineProfile =

  QWebEngineProfile.init(fcQWebEngineProfile_new())
proc create*(T: type QWebEngineProfile, name: string): QWebEngineProfile =

  QWebEngineProfile.init(fcQWebEngineProfile_new2(struct_miqt_string(data: name, len: csize_t(len(name)))))
proc create*(T: type QWebEngineProfile, parent: gen_qobject.QObject): QWebEngineProfile =

  QWebEngineProfile.init(fcQWebEngineProfile_new3(parent.h))
proc create*(T: type QWebEngineProfile, name: string, parent: gen_qobject.QObject): QWebEngineProfile =

  QWebEngineProfile.init(fcQWebEngineProfile_new4(struct_miqt_string(data: name, len: csize_t(len(name))), parent.h))
proc metaObject*(self: QWebEngineProfile, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQWebEngineProfile_metaObject(self.h))

proc metacast*(self: QWebEngineProfile, param1: cstring): pointer =

  fcQWebEngineProfile_metacast(self.h, param1)

proc metacall*(self: QWebEngineProfile, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =
